--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "name": "innocentia",
   "version": "0.0.1",
   "description": "",
@@ -40,6 +40,8 @@
     "browserify": "^14.4.0",
     "es2016": "0.0.0",
     "express": "^4.15.3",
+    "tsify": "^3.0.1",
+    "typescript": "^2.3.4",
     "watchify": "^3.9.0"
   }
 }
