--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "webpack": "^2.6.1"
   },
   "dependencies": {
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "es2016": "0.0.0",
