--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,7 +42,7 @@
         "comma-style": 1,
         "computed-property-spacing": 1,
         "func-call-spacing": 1,
-        "indent": [1, 4],
+        "indent": [1, 4, {"SwitchCase": 1}],
         "key-spacing": 1,
         "keyword-spacing": 1,
         "eol-last": 1,
