--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "main": "src/index.js",
+  "main": "src/innocentia/index.js",
   "name": "innocentia",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": ":innocent:",
   "author": {
     "name": "SASAKI Shunsuke",
     "email": "erukiti+github@gmail.com",
@@ -11,37 +11,28 @@
   "license": "Apache-2.0",
   "keywords": [],
   "scripts": {
-    "start": "ws run",
-    "build": "ws build",
-    "watch": "ws watch",
-    "test": "ws test"
+    "start": "innocentia run",
+    "build": "innocentia build",
+    "test": "innocentia test"
   },
   "bin": {
     "innocentia": "./bin/innocentia"
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-power-assert": "^1.0.0",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "es2016": "^0.0.0",
     "eslint": "^3.19.0",
-    "espower-babel": "^4.0.3",
-    "power-assert": "^1.4.3",
-    "waterslide": "^0.8.7",
-    "webpack": "^2.6.1"
-  },
-  "dependencies": {
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "es2016": "0.0.0",
-    "express": "^4.15.3",
     "tsify": "^3.0.1",
     "typescript": "^2.3.4",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "express": "^4.15.3",
+    "lignum": "^0.1.0",
+    "mkdirp": "^0.5.1",
+    "yargs": "^8.0.2"
   }
 }
