--- a/package.json
+++ b/package.json
@@ -21,29 +21,9 @@
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-power-assert": "^1.0.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "es2016": "^0.0.0",
-    "eslint": "^3.19.0",
-    "espower-babel": "^4.0.3",
-    "power-assert": "^1.4.3",
-    "waterslide": "^0.8.7",
-    "webpack": "^2.6.1"
+    "eslint": "^3.19.0"
   },
   "dependencies": {
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^14.4.0",
-    "es2016": "0.0.0",
-    "express": "^4.15.3",
-    "tsify": "^3.0.1",
-    "typescript": "^2.3.4",
-    "watchify": "^3.9.0"
+    "express": "^4.15.3"
   }
 }
