--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   },
   "devDependencies": {
     "ava": "^0.19.1",
-    "eslint": "^3.19.0"
-  },
-  "dependencies": {
+    "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
-    "express": "^4.15.3",
+    "eslint": "^3.19.0",
     "tsify": "^3.0.1",
     "typescript": "^2.3.4",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "express": "^4.15.3"
   }
 }
